[tool.poetry]
name = "chrispy"
version = "0.2.0"
description = "A dummy Python repository to mess around in."
authors = ["KrisGj <chris.gjurgjinoski@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
Flask = "^2.3.3"
gunicorn = "23.0.0"
poetry-core = "^2.1.3"
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
